# Matrix

./: Cargo.toml  Makefile
src/: lib.rs  main.rs
src/fun/: cosine.rs  cross_product.rs  linear_combination.rs  linear_interpolation.rs  mod.rs
src/matrix/: basic_operations.rs  determinant.rs  inverse.rs  matrix.rs  mod.rs  multiplication.rs  rank.rs  row_echelon.rs  trace.rs  transpose.rs
src/tests/: basic_operations.rs  complex.rs  cosine.rs  cross_product.rs  determinant.rs  dot_product.rs  inverse.rs  linear_combination.rs  linear_interpolation.rs  mod.rs  multiplication.rs  norm.rs  rank.rs  row_echelon.rs  trace.rs  transpose.rs
src/vector/: basic_operations.rs  dot_product.rs  linear_combination.rs  mod.rs  norm.rs  vector.rs
