[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

[features]
default = ["glutin_backend", "simple_window_builder", "glutin/default", "winit/default", "glutin-winit/default"]
glutin_backend = ["glutin"]
unstable = [] # used for benchmarks
vk_interop = [] # used for texture import from Vulkan
simple_window_builder = ["glutin", "glutin-winit", "winit", "raw-window-handle"] 

[dependencies.glutin]
version = "0.32"
features = []
optional = true
default-features = false

[dependencies.glutin-winit]
version = "0.5"
features = []
optional = true
default-features = false

[dependencies.winit]
version = "0.30"
features = []
optional = true
default-features = false

[dependencies.raw-window-handle]
version = "0.6"
features = []
optional = true
default-features = false

[dependencies]
memoffset = "0.9.0"
backtrace = "0.3.2"
smallvec = "1.0"
fnv = "1.0.5"
num-traits = "0.2"
glium = "0.36.0"
obj = "0.10"

[build-dependencies]
gl_generator = "0.14"

[dev-dependencies]
ouroboros = "0.18"
cgmath = "0.18"
genmesh = "0.6"
image = "0.25"
obj = { version = "0.10", features = ["genmesh"] }
rand = "0.8"
libc = "0.2.62"
winit = "0.30"
raw-window-handle = "0.6"
glutin-winit = "0.5"
takeable-option = "0.5"

[package.metadata.docs.rs]
all-features = true
